fixed timestamp and button stacking and overlaping at smaller resolutions

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -22,6 +22,7 @@ h1 {
 .brand {
   font-size: 1em;
 }
+
 h2 {
   font-size: 2em;
   font-weight: bolder;
@@ -168,5 +169,15 @@ body {
 }
 
 .fs-responsive {
-  font-size: clamp(0.8rem, 1.5vw, 1rem);
+  font-size: 1rem;
+}
+
+@media (max-width: 767px) {
+  .fs-responsive {
+    font-size: 0.8rem;
+  }
+}
+
+.date-text {
+  white-space: nowrap;
 }
